--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 DB_TABLE_PREFIX=
+CACHE_DRIVER=file
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
