Добавил в .env базовый токен для JWT Добавил поддержку подсказок с помощью внешнего пакета Поправил проверку ролей и api.php Поправил обработчик фильтров Вынес логику управления фильтрами во внешний файл FilterChecker При выполнении сидера теперь выводятся комментарии, а также выводится логин и пароль администратора для входа (пароль генерируется автоматически)

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_TABLE_PREFIX=
 CACHE_DRIVER=file
+JWT_SECRET=MyTestPasswordString!MyTestPasswordString!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
