Поправил сидинг из файла, избранное, отредактировал README.MD и RoleChecker.php

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ DB_PASSWORD=
 DB_TABLE_PREFIX=
 CACHE_DRIVER=file
 JWT_SECRET=MyTestPasswordString!MyTestPasswordString!
+SEEDER_DATA_FILE_PATH=database/seeders/DatabaseSeederData.json
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
